objects/Request_Country__c.object
<CustomObject>
    <description>This object stores all countries that the request system holds with their associated</description>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <description>The LocalSidKey linked to this Request Country</description>
        <inlineHelpText>The LocalSidKey linked to this Request Country</inlineHelpText>
        <label>LocaleSidKey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ar_AE</fullName>
                </value>
                <value>
                    <fullName>ar_BH</fullName>
                </value>
                <value>
                    <fullName>ar_DZ</fullName>
                </value>
                <value>
                    <fullName>ar_EG</fullName>
                </value>
                <value>
                    <fullName>ar_IQ</fullName>
                </value>
                <value>
                    <fullName>ar_JO</fullName>
                </value>
                <value>
                    <fullName>ar_KW</fullName>
                </value>
                <value>
                    <fullName>ar_LB</fullName>
                </value>
                <value>
                    <fullName>ar_LY</fullName>
                </value>
                <value>
                    <fullName>ar_MA</fullName>
                </value>
                <value>
                    <fullName>ar_OM</fullName>
                </value>
                <value>
                    <fullName>ar_QA</fullName>
                </value>
                <value>
                    <fullName>ar_SA</fullName>
                </value>
                <value>
                    <fullName>ar_SD</fullName>
                </value>
                <value>
                    <fullName>ar_SY</fullName>
                </value>
                <value>
                    <fullName>ar_TN</fullName>
                </value>
                <value>
                    <fullName>ar_YE</fullName>
                </value>
                <value>
                    <fullName>az_AZ</fullName>
                </value>
                <value>
                    <fullName>be_BY</fullName>
                </value>
                <value>
                    <fullName>bg_BG</fullName>
                </value>
                <value>
                    <fullName>bn_BD</fullName>
                </value>
                <value>
                    <fullName>bs_BA</fullName>
                </value>
                <value>
                    <fullName>ca_ES</fullName>
                </value>
                <value>
                    <fullName>ca_ES_EURO</fullName>
                </value>
                <value>
                    <fullName>cs_CZ</fullName>
                </value>
                <value>
                    <fullName>cy_GB</fullName>
                </value>
                <value>
                    <fullName>da_DK</fullName>
                </value>
                <value>
                    <fullName>de_AT</fullName>
                </value>
                <value>
                    <fullName>de_AT_EURO</fullName>
                </value>
                <value>
                    <fullName>de_CH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFCountry__c</fullName>
        <description>The country used in Salesforce.</description>
        <inlineHelpText>The country used in Salesforce.</inlineHelpText>
        <label>SFCountry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Mauritius</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Seychelles</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Tanzania, United Republic of</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Zimbabwe</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <description>Salesforce TimeZone Id linked to the Request Country</description>
        <inlineHelpText>Salesforce TimeZone Id linked to the Request Country</inlineHelpText>
        <label>TimeZoneSidKey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>America/Anchorage</fullName>
                </value>
                <value>
                    <fullName>America/Argentina/Buenos_Aires</fullName>
                </value>
                <value>
                    <fullName>America/Bogota</fullName>
                </value>
                <value>
                    <fullName>America/Caracas</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/El_Salvador</fullName>
                </value>
                <value>
                    <fullName>America/Halifax</fullName>
                </value>
                <value>
                    <fullName>America/Indiana/Indianapolis</fullName>
                </value>
                <value>
                    <fullName>America/Lima</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>America/Panama</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Puerto_Rico</fullName>
                </value>
                <value>
                    <fullName>America/Santiago</fullName>
                </value>
                <value>
                    <fullName>America/Sao_Paulo</fullName>
                </value>
                <value>
                    <fullName>America/St_Johns</fullName>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>Asia/Dubai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request Country</label>
    <nameField>
        <label>Request Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>